fixed character counter alignment in portrait mode

--- a/mvp/style.css
+++ b/mvp/style.css
@@ -125,6 +125,12 @@ small {
     display: block;
 }
 
+@media (orientation: portrait) {
+    .message-foot {
+        width: 75%;
+    }
+}
+
 #message-error,
 #numchar {
     /* border: 1px solid green; */
